# angie

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  PR_REVIEW_AGENT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.copilot/session-state/2feb76ba-ff40-4870-bea6-8724295d9c2c/: plan.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  docker-build.yml  frontend-build.yml  frontend-format.yml  frontend-lint.yml  frontend-security.yml  frontend-test.yml  frontend-typecheck.yml  markdown-format.yml  python-format.yml  python-lint.yml  python-security.yml  python-test.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  30abb0111546_add_scheduled_jobs_table.py  3b063372af07_add_unique_constraint_to_prompts_user_.py  5a627e0f805f_add_agent_slugs_to_teams.py  5b015091bf9f_add_is_enabled_to_teams.py  a1b2c3d4e5f6_add_connections_table.py  b2c3d4e5f6a7_add_conversation_id_to_scheduled_jobs.py  c3d4e5f6a7b8_add_token_usage_table.py  d98b34da3ebf_add_conversations_and_chat_messages.py  f7a8b9c0d1e2_add_agent_slug_to_chat_messages.py
docker/: Dockerfile.api  Dockerfile.daemon  Dockerfile.worker  entrypoint.sh
docs/: api-reference.md
frontend/: .gitignore  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/src/: test-setup.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/chat/: layout.tsx  page.tsx
frontend/src/app/connections/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/events/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/schedules/: layout.tsx  page.tsx
frontend/src/app/schedules/__tests__/: page.test.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/tasks/: page.tsx
frontend/src/app/teams/: page.tsx
frontend/src/app/usage/: page.tsx
frontend/src/app/workflows/: page.tsx
frontend/src/components/chat/: ChatMessage.tsx  ConversationSidebar.tsx  MentionAutocomplete.tsx
frontend/src/components/chat/__tests__/: ChatMessage.test.tsx  ConversationSidebar.test.tsx  MentionAutocomplete.test.tsx
frontend/src/components/connections/: ConnectionModal.tsx
frontend/src/components/connections/__tests__/: ConnectionModal.test.tsx
frontend/src/components/icons/: GitHubLogo.tsx
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx
frontend/src/components/layout/__tests__/: AppShell.test.tsx  Sidebar.test.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  spinner.tsx
frontend/src/components/ui/__tests__/: badge.test.tsx  button.test.tsx  card.test.tsx  input.test.tsx  spinner.test.tsx
frontend/src/lib/: agent-colors.ts  api.ts  auth.tsx  utils.ts
frontend/src/lib/__tests__/: agent-colors.test.ts  api.test.ts  auth.test.tsx  utils.test.ts
prompts/: angie.md  system.md
prompts/agents/: reminders.md  software-dev.md  weather.md  web.md
prompts/onboarding/: communication.md  personality.md  preferences.md
prompts/user/default/: communication.md  home.md  interests.md  personality.md  priorities.md  schedule.md  style.md  work.md
src/angie/: __init__.py  config.py  llm.py  main.py
src/angie/agents/: base.py  registry.py  teams.py
src/angie/agents/calendar/: gcal.py
src/angie/agents/dev/: github.py  software_dev.py
src/angie/agents/email/: correspondence.py  gmail.py  outlook.py  spam.py  yahoo.py
src/angie/agents/lifestyle/: weather.py
src/angie/agents/media/: spotify.py
src/angie/agents/networking/: ubiquiti.py
src/angie/agents/productivity/: reminders.py  web.py
src/angie/agents/smart_home/: home_assistant.py  hue.py
src/angie/agents/system/: cron.py  event_manager.py  task_manager.py  workflow_manager.py
src/angie/api/: app.py  auth.py
src/angie/api/routers/: agents.py  auth.py  channels.py  chat.py  connections.py  conversations.py  events.py  health.py  media.py  prompts.py  schedules.py  tasks.py  teams.py  usage.py  users.py  workflows.py
src/angie/cache/: redis.py
src/angie/channels/: base.py  discord.py  email.py  imessage.py  slack.py  web_chat.py
src/angie/cli/: _env_utils.py  chat.py  config.py  configure.py  main.py  prompts.py  setup.py  status.py
src/angie/core/: connections.py  conv_subscriptions.py  cron.py  crypto.py  events.py  feedback.py  initiative.py  intent.py  loop.py  prompts.py  subscriptions.py  tasks.py  token_usage.py  workflows.py
src/angie/db/: repository.py  session.py
src/angie/models/: __init__.py  agent.py  base.py  channel.py  connection.py  conversation.py  event.py  prompt.py  reminder.py  schedule.py  task.py  team.py  token_usage.py  user.py  workflow.py
src/angie/queue/: celery_app.py  workers.py
tests/: conftest.py
tests/e2e/: test_e2e_flow.py
tests/unit/: test_agent_colors.py  test_agent_context.py  test_agent_impls.py  test_agents.py  test_agents_extended.py  test_agents_full.py  test_agents_impl.py  test_api.py  test_api_routers.py  test_cache.py  test_channel_adapters.py  test_channels.py  test_channels_extended.py  test_channels_internals.py  test_cli.py  test_cli_full.py  test_config.py  test_configure.py  test_conv_subscriptions.py  test_core_remaining.py  test_cron_engine.py  test_crypto.py  test_db.py  test_events.py  test_extract_mention.py  test_feedback.py  test_llm.py  test_loop.py  test_models_repr.py  test_overhaul.py  test_prompts.py  test_tasks.py  test_token_usage.py  test_weather_agent.py  test_web_agent.py  test_workers.py  test_workers_full.py  test_workflows.py
