[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "angie"
version = "0.1.0"
description = "Angie — 24/7 personal AI assistant"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["ai", "assistant", "agent", "automation", "pydantic-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12,<3.14"
dependencies = [
    # Core AI
    "pydantic-ai>=0.0.14",
    "github-copilot-sdk>=0.1.0",
    "anthropic>=0.40.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "aiomysql>=0.2.0",
    "PyMySQL>=1.1.0",
    # Cache & Queue
    "redis>=5.0.0",
    "celery[redis]>=5.4.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    # Config
    "pydantic-settings>=2.3.0",
    # Templating
    "jinja2>=3.1.0",
    # CLI
    "click>=8.1.0",
    "rich>=13.7.0",
    # Scheduling
    "apscheduler>=3.10.0",
    # Channels
    "slack-sdk>=3.27.0",
    "discord.py>=2.3.0",
    "aiohttp>=3.9.0",
    # Agent SDKs
    "PyGithub>=2.3.0",
    # Web/Screenshot agent
    "playwright>=1.49.0",
    "trafilatura>=2.0.0",
    "beautifulsoup4>=4.12.0",
    # Utilities
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.3.0",
    "croniter>=2.0.0",
    # Date parsing
    "dateparser>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mdformat>=0.7.0",
    "mdformat-gfm>=0.3.0",
    "mdformat-frontmatter>=2.0.0",
    "mdformat-footnote>=0.1.0",
    "mypy>=1.10.0",
    "pyinstaller>=6.6.0",
]

[project.scripts]
angie = "angie.cli.main:cli"

[project.urls]
Homepage = "https://github.com/brettbergin/angie"
Repository = "https://github.com/brettbergin/angie"
Issues = "https://github.com/brettbergin/angie/issues"
Changelog = "https://github.com/brettbergin/angie/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/angie"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501",   # line length (handled by formatter)
    "B008",   # do not perform function calls in default arguments
    "UP046",  # Generic[T] subclass pattern (SQLAlchemy compat)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
pythonpath = ["src"]
filterwarnings = [
    "ignore::ResourceWarning",
    "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning",
    "ignore:coroutine 'run_daemon' was never awaited:RuntimeWarning",
    "ignore:coroutine '_seed_db' was never awaited:RuntimeWarning",
    "ignore:coroutine 'ask.<locals>._ask' was never awaited:RuntimeWarning",
    "ignore:coroutine '_run_task' was never awaited:RuntimeWarning",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B104"]

[tool.mdformat]
wrap = "no"
number = false
